infra/k8s/notification-auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-auth
  template:
    metadata:
      labels:
        app: notification-auth
    spec:
      containers:
        - name: notification-auth
          image: namankr301/notification_auth
---
apiVersion: v1
kind: Service
metadata:
  name: notification-auth-srv
spec:
  selector:
    app: notification-auth
  ports:
    - name: notification-auth
      protocol: TCP
      port: 3000
      targetPort: 3000
