infra/k8s/notification-email-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-email-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-email
  template:
    metadata:
      labels:
        app: notification-email
    spec:
      containers:
        - name: notification-email
          image: namankr301/notification_email
---
apiVersion: v1
kind: Service
metadata:
  name: notification-email-srv
spec:
  selector:
    app: notification-email
  ports:
    - name: notification-email
      protocol: TCP
      port: 3000
      targetPort: 3000
