infra/k8s/notification-rabbitmq-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 5672 # AMQP port for RabbitMQ messaging
            - containerPort: 15672 # Management plugin web UI
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-srv
spec:
  ports:
    - name: amqp
      protocol: TCP
      port: 5672 # AMQP port for messaging
      targetPort: 5672
    - name: management
      protocol: TCP
      port: 15672 # Management UI port
      targetPort: 15672
  selector:
    app: rabbitmq
  type: ClusterIP
