infra/k8s/notification-sms-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-sms-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-sms
  template:
    metadata:
      labels:
        app: notification-sms
    spec:
      containers:
        - name: notification-sms
          image: namankr301/notification_sms
---
apiVersion: v1
kind: Service
metadata:
  name: notification-sms-srv
spec:
  selector:
    app: notification-sms
  ports:
    - name: notification-sms
      protocol: TCP
      port: 3000
      targetPort: 3000
