infra/k8s/notification-whatsApp-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-whatsapp-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-whatsapp
  template:
    metadata:
      labels:
        app: notification-whatsapp
    spec:
      containers:
        - name: notification-whatsapp
          image: namankr301/notification_whatsapp
---
apiVersion: v1
kind: Service
metadata:
  name: notification-whatsapp-srv
spec:
  selector:
    app: notification-whatsapp
  ports:
    - name: notification-whatsapp
      protocol: TCP
      port: 3000
      targetPort: 3000
